import { SupabaseModel, baseRow, valueOrNull } from '@iuh-exchange/common';
import { ObjectId } from 'mongodb';

function withNestedIds(items = []) {
  return items.map((item) => ({
    _id: item._id || new ObjectId().toHexString(),
    ...item,
  }));
}

function mapOrderToRow(order) {
  return {
    ...baseRow(order),
    buyer_id: order.buyerId,
    seller_id: order.sellerId,
    product_id: order.productId,
    offer_id: valueOrNull(order.offerId),
    price: Number(order.price ?? 0),
    listing_type: order.listingType || 'SELL',
    trade_item_title: order.tradeItemTitle || '',
    trade_item_description: order.tradeItemDescription || '',
    status: order.status || 'PENDING',
    buyer_note: order.buyerNote || '',
    handover_location: order.handoverLocation || '',
    handover_time: valueOrNull(order.handoverTime),
    handover_status: order.handoverStatus || 'NOT_SCHEDULED',
    meeting_proposals: withNestedIds(order.meetingProposals || []),
    handover_code: valueOrNull(order.handoverCode),
    handover_code_expires_at: valueOrNull(order.handoverCodeExpiresAt),
    handover_proofs: withNestedIds(order.handoverProofs || []),
    buyer_handover_confirmed_at: valueOrNull(order.buyerHandoverConfirmedAt),
    seller_handover_confirmed_at: valueOrNull(order.sellerHandoverConfirmedAt),
    no_show_reports: withNestedIds(order.noShowReports || []),
    cancellation_reason: order.cancellationReason || '',
    cancellation_category: valueOrNull(order.cancellationCategory),
    cancelled_by: valueOrNull(order.cancelledBy),
    cancelled_at: valueOrNull(order.cancelledAt),
    dispute_status: order.disputeStatus || 'NONE',
    dispute_reason: order.disputeReason || '',
    dispute_opened_by: valueOrNull(order.disputeOpenedBy),
    dispute_opened_at: valueOrNull(order.disputeOpenedAt),
    dispute_resolved_by: valueOrNull(order.disputeResolvedBy),
    dispute_resolved_at: valueOrNull(order.disputeResolvedAt),
    dispute_resolution: order.disputeResolution || '',
    dispute_evidence: withNestedIds(order.disputeEvidence || []),
    dispute_timeline: withNestedIds(order.disputeTimeline || []),
    idempotency_key: valueOrNull(order.idempotencyKey),
    payment_status: order.paymentStatus || 'UNPAID',
    payment_method: order.paymentMethod || 'NONE',
    payment_transaction_id: valueOrNull(order.paymentTransactionId),
    transfer_proof_url: order.transferProofUrl || '',
    transfer_reported_at: valueOrNull(order.transferReportedAt),
    transfer_confirmed_at: valueOrNull(order.transferConfirmedAt),
    transfer_confirmed_by: valueOrNull(order.transferConfirmedBy),
    payment_provider_status: order.paymentProviderStatus || 'MOCK_PENDING',
    payment_webhook_verified: Boolean(order.paymentWebhookVerified),
    payment_issue_status: order.paymentIssueStatus || 'NONE',
    payment_issue_reason: order.paymentIssueReason || '',
    payment_issue_opened_by: valueOrNull(order.paymentIssueOpenedBy),
    payment_issue_opened_at: valueOrNull(order.paymentIssueOpenedAt),
    payment_issue_resolved_by: valueOrNull(order.paymentIssueResolvedBy),
    payment_issue_resolved_at: valueOrNull(order.paymentIssueResolvedAt),
    payment_issue_resolution: order.paymentIssueResolution || '',
    payment_issue_timeline: withNestedIds(order.paymentIssueTimeline || []),
    reconciliation_status: order.reconciliationStatus || 'NOT_REQUIRED',
    paid_at: valueOrNull(order.paidAt),
    refunded_at: valueOrNull(order.refundedAt),
    completed_at: valueOrNull(order.completedAt),
    receipt_number: valueOrNull(order.receiptNumber),
    status_history: order.statusHistory || [],
    transactions: order.transactions || [],
  };
}

export const Order = new SupabaseModel('orders', mapOrderToRow);
